@@ -16,6 +16,8 @@ Version 1.13.1+dev:
 
  * Language and i18n:
    * Updated translations: French, Galician, Japanese, Latvian.
+   * Fixed crashes during start-up on Windows resulting from add-ons containing
+     erroneous textdomain declarations (bug #23839).
 
  * Music and sound effects:
    * New dwarf hit and die sounds.
