@@ -21,6 +21,8 @@ Version 1.13.1+dev:
    * New generic portraits for the Troll and Troll Whelp
  * Language and i18n:
    * Updated translations: French, Galician, Japanese, Latvian
+   * Fixed crashes during start-up on Windows resulting from add-ons containing
+     erroneous textdomain declarations (bug #23839).
  * Lua API:
    * Added support for unit.level field (read only)
    * Added wesnoth.set_dialog_focus function
